fix: array out of bound for forHover class

--- a/src/custom.css
+++ b/src/custom.css
@@ -65,19 +65,14 @@
 
 #cursor{
     position: absolute;
-    /* width : 50px; */
-    /* height: 50px; */
-    /* border : 2px solid rgba(0, 0, 0, 0.333); */
-    /* box-sizing: border-box; */
+    width : 50px;
+    height: 50px;
+    border : 2px solid rgba(0, 0, 0, 0.333);
+    box-sizing: border-box;
     transition: 0.1s;
     transform: translate(-50%, -50%);
     border-radius: 50%;
     pointer-events: none;
-}
-
-
-.forHover{
-    background-color: red;
 }
 
 .quote, .author{
